# all-google-mcp

./: .gitignore  README.md  pyproject.toml
all_google_mcp/: __init__.py  __main__.py  app_info.py  google_auth.py  mcp_server.py  paths.py  setup_overlay.html  setup_ui.py
docs/: All_Google_MCP_User_Guide.docx
packaging/: Info.plist
packaging/MacOS/: AllGoogleMCP  AllGoogleMCPStdio  lib.sh
scripts/: sync_project_directory_top_projects_sheet.py  sync_project_inventory_sheet.py
